--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,119330],[[4,5,6,0,[],[0,23,19171],[],[[7,0,0,[],[0,336,18857,8],[]]],[],[1,0,1,0]],[10,11,12,0,[],[1,19195,13224],[],[[13,0,0,[],[1,19202,13216],[]]],[],[1,1,0,0]],[14,15,16,0,[],[1,32421,15725],[],[[17,0,0,[],[1,32431,15714],[]]],[],[1,1,0,0]],[18,19,20,0,[],[1,48147,13191],[],[[21,0,0,[],[1,48156,13181],[]]],[],[1,1,0,0]],[22,23,24,0,[],[0,61340,13521],[],[[25,0,0,[],[0,61350,13510,26],[]]],[],[1,0,1,0]],[27,28,29,0,[],[1,74862,3270],[],[[9,0,0,[],[1,74871,3260],[]]],[],[1,1,0,0]],[30,31,32,0,[],[1,78133,13842],[],[[33,0,0,[],[1,78142,13833],[]]],[],[1,1,0,0]],[34,35,36,0,[],[1,91976,18875],[],[[37,0,0,[],[1,91984,18865],[]]],[],[1,1,0,0]],[38,39,40,0,[],[1,110853,8475],[],[[41,0,0,[],[1,110863,8464],[]]],[],[1,1,0,0]]],[],[],[9,7,2,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,21918],[],[[4,0,0,[],[1,489,21428],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests","*Corporate/Tests","*addingAnnexure","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\addingAnnexure.robot","*Corporate/Tests/addingAnnexure.robot","*Add Annexutre","*Element '//img[@alt='proceedArrow']' did not appear in 5 seconds.","*Login User","*addPolicy","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\addPolicy.robot","*Corporate/Tests/addPolicy.robot","*Add Policy","*addPolicyManually","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\addPolicyManually.robot","*Corporate/Tests/addPolicyManually.robot","*Adding policy Manually","*claimHistory","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\claimHistory.robot","*Corporate/Tests/claimHistory.robot","*Claim History","*Endorsement","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\endorsement.robot","*Corporate/Tests/endorsement.robot","*Adding Endorsement","*Element '//*[@id=\"root\"]/div/div[1]/div[2]/div/div[2]/div[2]/div[1]/a[3]/div/div/div/div[5]/div[2]/a/button' did not appear in 5 seconds.","*Login","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\login.robot","*Corporate/Tests/login.robot","*renewHistory","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\renewHistory.robot","*Corporate/Tests/renewHistory.robot","*Renew History","*uploadPolicy","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\uploadPolicy.robot","*Corporate/Tests/uploadPolicy.robot","*Upload Policy","*viewPolicies","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\viewPolicies.robot","*Corporate/Tests/viewPolicies.robot","*View Policies"]);
+window.output["strings"] = window.output["strings"].concat(["*","*addPolicy","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\addPolicy.robot","*Corporate/Tests/addPolicy.robot","*Add Policy"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:59","fail":2,"label":"All Tests","pass":7,"skip":0}],[],[{"elapsed":"00:01:59","fail":2,"id":"s1","label":"Tests","name":"Tests","pass":7,"skip":0},{"elapsed":"00:00:19","fail":1,"id":"s1-s1","label":"Tests.addingAnnexure","name":"addingAnnexure","pass":0,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s2","label":"Tests.addPolicy","name":"addPolicy","pass":1,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s3","label":"Tests.addPolicyManually","name":"addPolicyManually","pass":1,"skip":0},{"elapsed":"00:00:13","fail":0,"id":"s1-s4","label":"Tests.claimHistory","name":"claimHistory","pass":1,"skip":0},{"elapsed":"00:00:14","fail":1,"id":"s1-s5","label":"Tests.Endorsement","name":"Endorsement","pass":0,"skip":0},{"elapsed":"00:00:03","fail":0,"id":"s1-s6","label":"Tests.Login","name":"Login","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s7","label":"Tests.renewHistory","name":"renewHistory","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s8","label":"Tests.uploadPolicy","name":"uploadPolicy","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"id":"s1-s9","label":"Tests.viewPolicies","name":"viewPolicies","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:21","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"addPolicy","name":"addPolicy","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1643376030563;
+window.output["baseMillis"] = 1643865693135;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 119400;
+window.output["generated"] = 21927;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
