--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,21918],[],[[4,0,0,[],[1,489,21428],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16779],[],[[4,0,0,[],[1,240,16537],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*addPolicy","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\addPolicy.robot","*Corporate/Tests/addPolicy.robot","*Add Policy"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Endorsement","*C:\\Users\\chaitanya.k\\PycharmProjects\\PaisaPlan\\Corporate\\Tests\\endorsement.robot","*Corporate/Tests/endorsement.robot","*Adding Endorsement"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:21","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"addPolicy","name":"addPolicy","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"Endorsement","name":"Endorsement","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1643865693135;
+window.output["baseMillis"] = 1643968686127;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21927;
+window.output["generated"] = 16785;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
